reconciler constructor, detect change in reconciliation

--- a/maskinporten-poc/kubebuilder/test/app/Makefile
+++ b/maskinporten-poc/kubebuilder/test/app/Makefile
@@ -4,7 +4,8 @@ create: ## Initialize the test-application infra.
 	kind create cluster --config ./kind.config.yaml
 	kubectl config use-context kind-operator
 	helm repo add traefik https://traefik.github.io/charts
-	helm upgrade --install --force traefik traefik/traefik --set ports.web.nodePort=30000 --set ports.websecure.nodePort=30001 --set ports.traefik.expose=true --set ports.traefik.nodePort=30002 --set service.type=NodePort
+	sleep 1
+	helm upgrade --install --force --version 26.1.0 traefik traefik/traefik --set ports.web.nodePort=30000 --set ports.websecure.nodePort=30001 --set ports.traefik.expose=true --set ports.traefik.nodePort=30002 --set service.type=NodePort
 	cd ../../ && make install
 
 .PHONY: build
@@ -22,6 +23,11 @@ deploy: build ## Deploy test-application to current kube context.
 client: ## Deploy a MaskinportenClient CRD to the cluster.
 	kubectl config use-context kind-operator
 	kubectl apply -f ../../config/samples/client_v1_maskinportenclient.yaml
+
+.PHONY: delete-client
+delete-client: ## Delete a MaskinportenClient CRD on the cluster.
+	kubectl config use-context kind-operator
+	kubectl delete -f ../../config/samples/client_v1_maskinportenclient.yaml
 
 .PHONY: destroy
 destroy: ## Destroy the test-application, including kind cluster.
