--- a/maskinporten-poc/kubebuilder/Makefile
+++ b/maskinporten-poc/kubebuilder/Makefile
@@ -83,8 +83,8 @@ lint-fix: golangci-lint ## Run golangci-lint linter and perform fixes
 build: manifests generate fmt vet ## Build manager binary.
 	go build -o bin/manager cmd/main.go
 
-.PHONY: telemetry
-telemetry: ## Build and start the telemetry services using docker-compose
+.PHONY: otel
+otel: ## Build and start the telemetry services using docker-compose
 	@$(CONTAINER_TOOL) compose up --build
 
 .PHONY: run
